# LoRa-BLE-Sensor

./: .gitignore  CMakeLists.txt  README.md  pmic.overlay  prj.conf  sample.yaml  usb.conf  west.yml
.github/: Dockerfile
.github/workflows/: build.yml  ci.yml  docs.yml
.west/: config
app/: CMakeLists.txt  Kconfig  sysbuild.conf  west.yml
app/conf/: pmic.overlay  prj.conf
app/include/: ble_device_service.h  ble_lorawan_service.h  ble_sensor_service.h  sensor_app.h  sensor_ble.h  sensor_data.h  sensor_id.h  sensor_names.h  sensor_pmic.h  sensor_power.h  sensor_reading.h  sensor_scheduling.h  sensor_timer.h
app/src/: ble_device_service.c  ble_lorawan_service.c  ble_sensor_service.c  main.c  sensor_app.c  sensor_ble.c  sensor_data.c  sensor_lorawan.c  sensor_names.c  sensor_nvs.c  sensor_pmic.c  sensor_power.c  sensor_reading.c  sensor_scheduling.c  sensor_timer.c
app/sysbuild/: mcuboot.conf  mcuboot.overlay
boards/arm/lora_ble_sensor/: Kconfig.defconfig  board.cmake  board.yml  lora_ble_sensor-pinctrl.dtsi  lora_ble_sensor.dts  lora_ble_sensor.yaml  lora_ble_sensor_1_1_0.overlay  lora_ble_sensor_defconfig
boards/st/lora_current_sensor/: Kconfig.defconfig  Kconfig.lora_current_sensor  board.cmake  board.yml  lora_current_sensor.dts  lora_current_sensor.yaml  lora_current_sensor_defconfig
boards/terramatrix/lora_ble_sensor/: Kconfig.lora_ble_sensor  board.yml  lora_ble_sensor.dts  lora_ble_sensor.yaml  lora_ble_sensor_1_0_0.overlay  pm_static.yml
conf/: prj.conf
docs/: Doxyfile  doxygen.config
docs/html/: README_8md.html  annotated.html  app_2fakes_2sensor__power__fakes_8h_source.html  app_2fakes_2sensor__reading__fakes_8h_source.html  ble__device__service_8c.html  ble__device__service_8c__incl.map  ble__device__service_8c__incl.md5  ble__device__service_8h.html  ble__device__service_8h__dep__incl.map  ble__device__service_8h__dep__incl.md5  ble__device__service_8h__incl.map  ble__device__service_8h__incl.md5  ble__device__service_8h_source.html  ble__lorawan__service_8c.html  ble__lorawan__service_8c__incl.map  ble__lorawan__service_8c__incl.md5  ble__lorawan__service_8h.html  ble__lorawan__service_8h__dep__incl.map  ble__lorawan__service_8h__dep__incl.md5  ble__lorawan__service_8h__incl.map  ble__lorawan__service_8h__incl.md5  ble__lorawan__service_8h_source.html  ble__sensor__service_8c.html  ble__sensor__service_8c__incl.map  ble__sensor__service_8c__incl.md5  ble__sensor__service_8h.html  ble__sensor__service_8h__dep__incl.map  ble__sensor__service_8h__dep__incl.md5  ble__sensor__service_8h__incl.map  ble__sensor__service_8h__incl.md5  ble__sensor__service_8h_source.html  classes.html  data_2fakes_2sensor__power__fakes_8h_source.html  data_2fakes_2sensor__reading__fakes_8h_source.html  dir_000001_000000.html  dir_000002_000000.html  dir_000002_000001.html  dir_000003_000000.html  dir_000004_000000.html  dir_000005_000000.html  (+200 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+34 more)
docs/latex/: annotated.tex  app_2fakes_2sensor__power__fakes_8h_source.tex  app_2fakes_2sensor__reading__fakes_8h_source.tex  ble__device__service_8c.tex  ble__device__service_8c__incl.md5  ble__device__service_8h.tex  ble__device__service_8h__dep__incl.md5  ble__device__service_8h__incl.md5  ble__device__service_8h_source.tex  ble__lorawan__service_8c.tex  ble__lorawan__service_8c__incl.md5  ble__lorawan__service_8h.tex  ble__lorawan__service_8h__dep__incl.md5  ble__lorawan__service_8h__incl.md5  ble__lorawan__service_8h_source.tex  ble__sensor__service_8c.tex  ble__sensor__service_8c__incl.md5  ble__sensor__service_8h.tex  ble__sensor__service_8h__dep__incl.md5  ble__sensor__service_8h__incl.md5  ble__sensor__service_8h_source.tex  data_2fakes_2sensor__power__fakes_8h_source.tex  data_2fakes_2sensor__reading__fakes_8h_source.tex  dir_78f5ecd95a37a67589a284a718a0be9c.tex  dir_a8f641299cfea9f7461c2df1141b7786.tex  dir_a8f641299cfea9f7461c2df1141b7786_dep.md5  dir_d422163b96683743ed3963d4aac17747.tex  dir_d422163b96683743ed3963d4aac17747_dep.md5  files.tex  index.tex  main_8c.tex  main_8c__incl.md5  md_README.tex  refman.tex  sensor__app_8c.tex  sensor__app_8c__incl.md5  sensor__app_8h.tex  sensor__app_8h__dep__incl.md5  sensor__app_8h__incl.md5  sensor__app_8h_source.tex  (+83 more)
include/: ble_lorawan_service.h  ble_sensor_service.h  sensor_app.h  sensor_ble.h  sensor_ble_service.h  sensor_data.h  sensor_id.h  sensor_lorawan.h  sensor_nvs.h  sensor_power.h  sensor_reading.h  sensor_scheduling.h  sensor_timer.h
manifest/: west.yml
manifest/zephyr/: module.yml
scripts/: create_venv.sh  init_ci.sh  init_project.sh  initialize_ci.sh
src/: ble_lorawan_service.c  ble_sensor_service.c  main.c  sensor_app.c  sensor_ble.c  sensor_data.c  sensor_lorawan.c  sensor_nvs.c  sensor_power.c  sensor_reading.c  sensor_scheduling.c  sensor_timer.c
tests/app/memory/: prj.conf  testcase.yaml
tests/functionality/app/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/functionality/app/boards/: lora_ble_sensor.conf  native_sim.overlay
tests/functionality/app/fakes/: sensor_ble_fakes.c  sensor_ble_fakes.h  sensor_lorawan_fakes.c  sensor_lorawan_fakes.h  sensor_pmic_fakes.c  sensor_pmic_fakes.h  sensor_power_fakes.c  sensor_power_fakes.h  sensor_reading_fakes.c  sensor_reading_fakes.h
tests/functionality/app/src/: main.c
tests/functionality/pmic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/functionality/pmic/boards/: native_sim.overlay
tests/functionality/pmic/fakes/: sensor_led_fakes.c  sensor_led_fakes.h
tests/functionality/pmic/src/: main.c
tests/sensor_power_tests/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/: west.yml
(+67 files in other folders)
